[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/on.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/themes/off.tres" type="StyleBox" id=2]
[ext_resource path="res://gates/socket/input.gd" type="Script" id=3]

[node name="input" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1486.0
margin_bottom = -860.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 50, 40 )
rect_pivot_offset = Vector2( 20, 20 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="on" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 20, 20 )
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="off" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 20, 20 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 40, 20, 55, 20 )
width = 6.0
default_color = Color( 0.0588235, 0.0196078, 0.196078, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Button" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 20, 20 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -80.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 40, 20 )
text = "Temp value"
align = 1
valign = 1
clip_text = true
uppercase = true
max_lines_visible = 1
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
